public/obsidian.css
* { box-sizing: border-box }

/* VARIABLES */

:root {
  --error: #E54B4B;
  --green: #a5a740;
  --background: #201c1b;
  --panel: #2b2827;
  --block: #33302f;
  --prominent: #3f3431;
  --overlay: #464342;
  --text: #c4b6ab;
  --link: #c48d66;
  --linkHover: #e9ceba;
  --linkVisited: #a07150;
  --dim: #92857a;
  --maximum: #fff;
  --accent: #a5a664;
  --user: #a5a664;
  --userHover: #edeec7;
  --character: #968ebd;
  --characterHover: #d7d3ec;
  --new: gold;
  --buttonBg: #634b41;
  --buttonBgHover: #705343;
  --inputBg: #2a2625;
  --heart: #b66767;
  --frown: #b68e67;
  --thumb: #b6b367;
  --laugh: #83b667;
  --bodyFont: 'Alegreya Sans', Arial, Helvetica, sans-serif;
  --headlineFont: 'Alegreya', 'Times New Roman', Times, serif;
}

/* FONTS */

@font-face {
  font-family: 'Alegreya Sans';
  font-style: normal;
  font-weight: 100 900;
  src: url('./fonts/AlegreyaSans.woff2') format('woff2-variations');
}

@font-face {
  font-family: 'Alegreya Sans Italic';
  font-style: italic;
  font-weight: 100 900;
  src: url('./fonts/AlegreyaSans-Italic.woff2') format('woff2-variations');
}

@font-face {
  font-family: 'Material Symbols Sharp';
  font-display: block;
  font-style: normal;
  font-weight: 100 700;
  src: url('./fonts/MaterialSymbolsSharpSubset.woff2') format('woff2');
}

/* BASICS */

html { background-color: var(--background) }

body, a {
  font-family: var(--bodyFont);
  font-weight: 400;
  font-size: 20px;
  color: var(--text);
  text-decoration: none;
}

h1, h2, h3, h4, h5 {
  font-family: var(--headlineFont);
}

h1, h2, h3, h4 {
  font-variation-settings: 'wght' 600;
}

a {
  color: var(--link);
  font-variation-settings: 'wght' 600;
}
  a:hover {
    color: var(--linkHover);
  }

hr {
  border: none;
  border-top: 1px solid var(--text)
}

blockquote {
  border-left: 3px solid var(--linkVisited);
  padding-left: 15px;
  font-style: italic;
}

code {
  display: block;
  font-family: 'Courier New', Monospace;
  font-size: 17px;
  background: black;
  padding: 10px;
  border-radius: 10px;
  color: #AAA;
  width: 100%;
  line-height: 150%;
}

summary {
  cursor: pointer;
}

/* TOASTS */

.notyf__toast {
  border-radius: 10px !important;
}

/* FORM */

button, .button {
  font-family: 'Alegreya Sans';
  font-size: 20px;
  font-variation-settings: 'wght' 600;
  padding: 10px 20px;
  border-radius: 8px;
  color: var(--text);
  background-color: var(--buttonBg);
  border: 1px color-mix(in srgb, var(--buttonBg), var(--accent) 15%) solid;
  cursor: pointer;
  box-shadow: 2px 2px 3px #0003;
}

  button.large, .button.large {
    padding: 15px 30px;
    min-width: 240px;
  }

  button:hover, .button:hover {
    background-color: var(--buttonBgHover);
    border: 1px color-mix(in srgb, var(--buttonBg), var(--linkVisited) 30%) solid;
    transition: color 0.1s ease-in-out, background-color 0.1s ease-in-out;
    color: #dacfc6;
  }

  button:disabled {
    color: var(--dim);
    background-color: var(--block);
    border: none;
    cursor: not-allowed;
    box-shadow: none;
  }

  button.material-symbols-rounded {
    border: none;
    background-color: transparent;
    box-shadow: none;
    padding: 0px;
  }

  button.secondary {
    border: none;
    background: none;
    color: var(--linkVisited);
    box-shadow: none;
    padding: 5px;
  }

  button.active {
    background-color: var(--panel);
    border: 1px var(--panel) solid;
    box-shadow: inset 2px 2px 2px #0003;
  }

input[type=text], textarea, input[type=checkbox], .ProseMirror {
  font-family: 'Alegreya Sans', Arial, Helvetica, sans-serif;
  padding: 15px;
  margin: 0px;
  font-size: 20px;
  border: none;
  color: var(--text);
  border-bottom: 3px var(--buttonBg) solid;
  background-color: var(--inputBg);
  box-shadow: inset 1px 1px 6px #0006;
  border-radius: 10px;
  appearance: none;
  min-width: 40px;
  min-height: 40px;
}

textarea, .ProseMirror {
  line-height: 140%;
  font-size: 20px;
}

  input[type=text]:focus, textarea:focus, select:focus, .ProseMirror-focused {
    outline: 2px var(--buttonBg) solid;
  }
  input[type=checkbox] {
    cursor: pointer;
  }
  input[type=color] {
    width: 36px;
    height: 36px;
    padding: 0px;
    appearance: none;
  }
  input[type="color"]::-webkit-color-swatch-wrapper {
    padding: 3px;
  }
  input[type=checkbox]:checked {
    background-color: var(--accent);
    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' height='20' viewBox='0 -960 960 960' width='20'><path d='M395-253 194-455l83-83 118 117 288-287 83 84-371 371Z' fill='%23201c1b'/></svg>");
    background-repeat: no-repeat;
    background-position: center center;
    background-size: 35px 35px;
    box-shadow: 1px 1px 6px #0006;
  }

option {
  padding: 5px;
}
  option:checked {
    color: white;
    background-color: var(--accent);
  }
  option.character:checked {
    color: white;
    background-color: var(--character);
  }

select {
  padding: 15px;
  font-size: 18px;
  box-shadow: 1px 1px 6px #0006;
  border: none;
  border-top: 3px var(--buttonBg) solid;
  color: var(--text);
  border-radius: 10px;
  cursor: pointer;
  appearance: none;
  position: relative;
  background-color: color-mix(in srgb, var(--panel), var(--prominent) 15%);
  background-image: url("data:image/svg+xml;utf8,<svg width='12' height='8' viewBox='0 0 12 8' fill='none' xmlns='http://www.w3.org/2000/svg'><path fill-rule='evenodd' clip-rule='evenodd' d='M12 1.41024L10.59 0.000244079L6 4.58024L1.41 0.000243678L-6.16331e-08 1.41024L6 7.41024L12 1.41024Z' fill='%23c4b6ab'/></svg>");
  background-repeat: no-repeat;
  background-position: right 16px center;
  background-size: 14px 14px;
}

.user {
  color: var(--user);
}
  .user:hover {
    color: var(--userHover);
  }
.character {
  color: var(--character);
}
  .character:hover {
    color: var(--characterHover);
  }

.toggle {
  display: flex;
  gap: 1px;
}
  .toggle button {
    padding: 10px;
  }
/* ... */

